# mds

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  baseline.cpp  bench.cpp  binary_search.cpp  hello.cpp  linear_search.cpp  main.cpp  naive.cpp  naive_impv.cpp  reference_exact.c  reference_exact.cpp
benchmark/: analysis.xlsx  in.txt  out.csv
benchmark/merged/: merge.py  merged_output.csv
benchmark/other/: images  inputstr  tmp
benchmark/output/: grid-25-40.times.csv  grid-30-49.times.csv  rand-30-120.times.csv  rand-30-60.times.csv  ring-15-15.times.csv  ring-25-25.times.csv  ring-30-30.times.csv  tree-20-19.times.csv  tree-25-24.times.csv  tree-30-29.times.csv
benchmark/scripts/: better_bench.sh  runall.sh
include/: allocator.h  builtins_bootstrap.h  container.h  lib_hpa.h  lib_mds.h  macros_bootstrap.h  ported_std.h  types.h  utils.h
include/container/: aligned_matrix.h  array.h  bitset.h  deque.h  generic.h  graph.h
include/lib/: builtins_bootstrap.h  types.h
include/memory/: allocator.h  generic.h  virtual_memory.h
include/utils/: benchmark.h  io.h  pipeline.h
